# libsac

./: README.md
src/: CMakeLists.txt
src/include/: libsac.h
src/lib/: CMakeLists.txt  Makefile  analyzer.cpp  analyzer.h  decode.cpp  decode_dd4a.cpp  decode_dd4a.h  decode_dd8a.cpp  decode_dd8a.h  encode.cpp  encode_dd4a.cpp  encode_dd4a.h  encode_dd8a.cpp  encode_dd8a.h  libsac.cpp  loader.cpp  mapper.h  packed_data.cpp  packed_data.h  quant_lut_dd4a.cpp  quant_lut_dd8a.cpp  sac_data.h  saver.cpp  util.cpp  util.h
src/lib/decoder/: decode.cpp  decode_dd4a.cpp  decode_dd4a.h  decode_dd8a.cpp  decode_dd8a.h
src/lib/encoder/: analyzer.cpp  analyzer.h  encode.cpp  encode_dd4a.cpp  encode_dd4a.h  encode_dd8a.cpp  encode_dd8a.h  mapper.h
src/tools/: CMakeLists.txt  Makefile  file_io.cpp  file_io.h  hires_time.h  sac  sac.cpp  scoped_ptr.h  sound.h
